use toList instead of collectors.toList()